# cojoNES

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  README.md  cojoNES.sln  cojoNES.vcxproj  cojoNES.vcxproj.filters
cmake/: CPM.cmake  ProjectOptions.cmake
source/: CMakeLists.txt  CPU.cpp  CPU.hpp  Cartridge.cpp  Cartridge.hpp  Memory.hpp  Opcodes.hpp  ROM.cpp  ROM.hpp  System.cpp  System.hpp  main.cpp
tests/: CMakeLists.txt  test.cpp
